--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -12,7 +12,7 @@ $moda = SUPER_ALT
 
 $terminal = foot
 $runner = tofi-drun --drun-launch=true
-$browser = zen-browser
+$browser = librewolf
 $fileManager = $terminal -e lf
 $rssReader = $terminal -e newsboat
 $calculator = flatpak run org.gnome.Calculator
@@ -27,6 +27,14 @@ bind = $mod,  U,      exec, $rssReader
 bind = $mod,  C,      exec, $calculator
 
 $bctl = busctl --user set-property rs.wl-gammarelay / rs.wl.gammarelay
+
+$night_up   = $bctl UpdateTemperature d +100
+$night_down = $bctl UpdateTemperature d -100
+$night_base = $bctl Temperature q 4000
+
+$light_up   = $bctl UpdateBrightness d +0.02
+$light_down = $bctl UpdateBrightness d -0.02
+$light_base = $bctl Brightness d 1
 
 $night_top  = $bctl Temperature q 3000
 $night_mid  = $bctl Temperature q 4000
@@ -43,6 +51,13 @@ bind = $modc, N, exec, $night_top
 bind = $mod,  N, exec, $night_mid
 bind = $mods, N, exec, $night_low
 bind = $mods, P, exec, $cliphist
+# bind = $modc, B, exec, $light_up
+# bind = $mod,  B, exec, $light_base
+# bind = $mods, B, exec, $light_down
+# 
+# bind = $modc, N, exec, $night_up
+# bind = $mod,  N, exec, $night_base
+# bind = $mods, N, exec, $night_down
 
 # $ss_region = grimblast --freeze copy area
 # $ss_screen = grimblast --freeze copysave output
@@ -58,8 +73,9 @@ bind = $mod, P, exec, $hyprscripts/scratchpads.sh password
 bind = $mod, M, exec, $hyprscripts/scratchpads.sh music
 bind = $mod, G, exec, $hyprscripts/scratchpads.sh launchers
 
-bind = $mod,  Y, exec, book -o youtube
-bind = $mods, Y, exec, book youtube
+# xd
+bind = CTRL_ALT, DELETE, exec, $terminal -e btop
+
 bind = $mod,  S, exec, book -o sites
 bind = $mods, S, exec, book sites
 
