--- a/config/hypr/hyprland/autostart.conf
+++ b/config/hypr/hyprland/autostart.conf
@@ -4,7 +4,7 @@ exec-once = wl-paste --type text --watch cliphist store     # Stores only text d
 exec-once = wl-paste --type image --watch cliphist store    # Stores only image data
 exec-once = wl-clip-persist --clipboard both
 exec-once = udiskie -s
-exec-once = wl-gammarelay-rs
+exec-once = wl-gammarelay-rs run
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark" 
