--- a/config/hypr/hyprland/displays.conf
+++ b/config/hypr/hyprland/displays.conf
@@ -3,8 +3,8 @@
 monitor = ,         preferred,     auto,        auto
 monitor = DP-1,     1920x1080@360, 1080x420,    1
 monitor = DP-2,     1920x1080@60,  3000x420,    1
-monitor = HDMI-A-1, 1920x1080@60,  0x0,         1, transform, 1
-monitor = HDMI-A-2, 1920x1080@60,  3000x420,    1, mirror, DP-2
+monitor = HDMI-A-2, 1920x1080@60,  0x0,         1, transform, 1
+monitor = HDMI-A-1, 1920x1080@60,  3000x420,    1, mirror, DP-2
 
 exec-once = xrandr --output DP-1 --primary
 
@@ -16,5 +16,5 @@ workspace = 4, monitor:DP-1, persistent:true
 workspace = 5, monitor:DP-1, persistent:true
 workspace = 6, monitor:DP-2, persistent:true
 workspace = 7, monitor:DP-2, persistent:true
-workspace = 8, monitor:HDMI-A-1, persistent:true
-workspace = 9, monitor:HDMI-A-1, persistent:true
+workspace = 8, monitor:DP-2, persistent:true
+workspace = 9, monitor:HDMI-A-2, persistent:true, layoutopt:orientation:top
