--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -1,3 +1,14 @@
+# WORKSPACES
+# 1 -> General Use
+# 2 -> General Use
+# 3 -> Image / Video / Audio editing
+# 4 -> Entertainment
+# 5 -> Gaming
+# 6 -> Other Use
+# 7 -> Background Tasks / Game Launchers
+# 8 -> Communications
+# 9 -> Chat applications
+
 # Layer rules
 #layerrule = blur,      waybar
 layerrule = blur,      launcher
@@ -16,7 +27,6 @@ windowrulev2 = size 50% 65%, class:^(spotube)$
 windowrulev2 = float, title:^(Confirm File Replacing)$
 windowrulev2 = float, class:^(xdg-desktop-portal-gtk)$
 windowrulev2 = float, class:^(Friends List)$
-windowrulev2 = float, class:^(battle.net.exe)$
 windowrulev2 = float, class:^(spotube)$
 windowrulev2 = float, class:^(Bitwarden)$
 windowrulev2 = float, class:^(org.pulseaudio.pavucontrol)$
@@ -50,12 +60,14 @@ windowrulev2 = fullscreen, class:^(rocketleague.exe)$
 # Default workspace for applications
 
 ## 3
-windowrulev2 = workspace 3, class:^(com.stremio.stremio)$
+# Image / Video / Audio editing
+windowrulev2 = workspace 3, title:^(GNU Image Manipulation Program)$
+windowrulev2 = workspace 3, title:^(GIMP Startup)$
+windowrulev2 = workspace 3, class:^(audacity.bin)$
 
 ## 4
-# Email
-windowrulev2 = workspace 4 silent, class:^(org.mozilla.Thunderbird)$
-
+# Entertainment
+windowrulev2 = workspace 4, class:^(com.stremio.stremio)$
 
 ## 5
 # Games
@@ -76,11 +88,13 @@ windowrulev2 = workspace 5, class:^(supertux2)$
 windowrulev2 = workspace 5, class:^(sober)$
 
 ## 6
-# OBS
-windowrulev2 = workspace 6, class:^(com.obsproject.Studio)$
+# Secondary Tasks
 
-## Game Launchers
 ## 7
+# Background Tasks
+windowrulev2 = workspace 7, class:^(com.obsproject.Studio)$
+windowrulev2 = workspace 7, title:^(Ultimaker Cura)$
+# Game Launchers
 windowrulev2 = workspace 7 silent, class:^(steam)$
 windowrulev2 = workspace 7 silent, title:^(Steam)$
 windowrulev2 = workspace 7 silent, class:^(Minecraft Launcher)$
@@ -92,12 +106,16 @@ windowrulev2 = workspace 7 silent, class:^(heroic)$
 windowrulev2 = workspace 7 silent, class:^(dolphin-emu)$
 
 ## 8
-# Discord
-windowrulev2 = workspace 8 silent, class:^(vesktop)$
-windowrulev2 = workspace 8 silent, class:^(com.discordapp.Discord)$
+# Communications
+windowrulev2 = workspace 8 silent, class:^(org.mozilla.Thunderbird)$
 
 ## 9
+# Chat apps
 # Whatsapp
 windowrulev2 = workspace 9 silent, class:^(whatsapp-desktop-linux)$
 windowrulev2 = workspace 9 silent, class:^(com.rtosta.zapzap)$
-
+# Discord
+windowrulev2 = workspace 9 silent, class:^(vesktop)$
+windowrulev2 = workspace 9 silent, class:^(com.discordapp.Discord)$
+# Matrix
+windowrulev2 = workspace 9 silent, class:^(im.riot.Riot)$
