--- a/config/hypr/hyprland/envoirment.conf
+++ b/config/hypr/hyprland/envoirment.conf
@@ -34,6 +34,7 @@ env = ELECTRON_TRASH,trash-cli
 env = XDG_SESSION_TYPE,wayland
 
 # Others
+env = HYPRSHOT_DIR,~/Pictures/screenshots
 env = _JAVA_AWT_WM_NONREPARENTING,1
 env = MOZ_ENABLE_WAYLAND,1
 env = MOZ_DISABLE_RDD_SANDBOX,1
