--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -16,7 +16,7 @@ $browser = librewolf
 $fileManager = $terminal -e lf
 $rssReader = $terminal -e newsboat
 $calculator = flatpak run org.gnome.Calculator
-$cliphist = cliphist list | cut -d' ' -f2- | tofi | wl-copy
+$cliphist = cliphist list | cut -d' ' -f2- | tofi -c ~/.config/tofi/center.config | wl-copy
 
 # Programs
 bind = $mod,  RETURN, exec, $terminal
@@ -50,7 +50,7 @@ bind = $mods, B, exec, $bright_top
 bind = $modc, N, exec, $night_top
 bind = $mod,  N, exec, $night_mid
 bind = $mods, N, exec, $night_low
-bind = $mods, P, exec, $cliphist
+bind = $mods, C, exec, $cliphist
 # bind = $modc, B, exec, $light_up
 # bind = $mod,  B, exec, $light_base
 # bind = $mods, B, exec, $light_down
@@ -62,10 +62,10 @@ bind = $mods, P, exec, $cliphist
 # $ss_region = grimblast --freeze copy area
 # $ss_screen = grimblast --freeze copysave output
 
-$ss_region = screenshot
-$ss_screen = screenshot -f
+# grim -g "$(slurp -o -r)" -t ppm - | satty --filename - --fullscreen --output-filename ~/Pictures/screenshots/$(date '+%Y%m%d-%H:%M:%S').png
 
-bind = $modc, S, exec, $ss_region
+bind = $mods, S, exec, hyprshot -z -m region -o ~/Pictures/screenshots
+bind = $modc, S, exec, hyprshot -z -m output -o ~/Pictures/screenshots
 
 $hyprscripts= ~/.config/hypr/scripts
 bind = $mod, V, exec, $hyprscripts/scratchpads.sh volume
@@ -77,7 +77,7 @@ bind = $mod, G, exec, $hyprscripts/scratchpads.sh launchers
 bind = CTRL_ALT, DELETE, exec, $terminal -e btop
 
 bind = $mod,  S, exec, book -o sites
-bind = $mods, S, exec, book sites
+# bind = $mods, S, exec, book sites
 
 # Actions
 bind = $modc, Q, exit
@@ -88,8 +88,9 @@ bind = $mod,  F, fullscreen
 bind = $mod,  Tab, fullscreen, 1 
 bind = $modc, R, exec, killall waybar && waybar
 bind = $modc, W, exec, killall hyprpaper && hyprpaper
-bind = ALT, Tab, cyclenext,
-bind = ALT, Tab, bringactivetotop,
+# bind = ALT, Tab, cyclenext,
+# bind = ALT, Tab, bringactivetotop,
+bind = ALT, Tab, exec, hyprswitch gui
 
 binde =, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%+
 binde =, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%-
