--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -11,9 +11,9 @@
 
 # Layer rules
 #layerrule = blur,      waybar
-layerrule = blur,      launcher
-layerrule = noanim,    launcher
-layerrule = dimaround, launcher
+#layerrule = blur,      launcher
+#layerrule = noanim,    launcher
+#layerrule = dimaround, launcher
 
 windowrulev2 = noblur, title:^()$, class:^()$ 
 windowrulev2 = suppressevent maximize,  class:.*
@@ -22,15 +22,21 @@ windowrulev2 = suppressevent maximize,  class:.*
 windowrulev2 = size 50% 60%, class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = size 50% 60%, class:^(Bitwarden)$
 windowrulev2 = size 50% 65%, class:^(spotube)$
+windowrulev2 = size 50% 65%, title:^(Spotify)$
+windowrulev2 = size 50% 65%, title:^(Spotify Free)$
 
 # Floating
 windowrulev2 = float, title:^(Confirm File Replacing)$
 windowrulev2 = float, class:^(xdg-desktop-portal-gtk)$
 windowrulev2 = float, class:^(Friends List)$
 windowrulev2 = float, class:^(spotube)$
+windowrulev2 = float, title:^(Spotify)$
+windowrulev2 = float, title:^(Spotify Free)$
 windowrulev2 = float, class:^(Bitwarden)$
 windowrulev2 = float, class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = float, class:^(org.gnome.Calculator)$
+windowrulev2 = float, class:^(com.gabm.satty)$
+windowrulev2 = center,class:^(com.gabm.satty)$
 
 # Xwayland
 windowrulev2 = noinitialfocus, class:^(xwaylandvideobridge)$
