--- a/config/tofi/center.config
+++ b/config/tofi/center.config
@@ -1,7 +1,7 @@
-anchor = bottom
-width = 100%
-height = 14
-horizontal = true
+anchor = center
+width = 40%
+height = 40%
+horizontal = false
 prompt-text = "  "
 font = "IBM Plex Mono Medium"
 font-size = 7
@@ -9,16 +9,16 @@ hint-font = true
 outline-width = 0
 border-width = 0
 min-input-width = 120
-result-spacing = 20
+result-spacing = 10
 background-color = #000000
 
-terminal = tofi
+terminal = foot
 fuzzy-match = true
 
-padding-top = 0
+padding-top = 10
 padding-bottom = 0
-padding-left = 0
-padding-right = 0
+padding-left = 10
+padding-right = 10
 
 input-color = #fefefe
 default-result-color = #999999
