--- a/config/hypr/hypridle.conf
+++ b/config/hypr/hypridle.conf
@@ -18,17 +18,12 @@ general {
 #}
 
 listener {
-    timeout = 300                                 # 5min
-    on-timeout = hyprlock                         # lock screen when timeout has passed
+    timeout = 600                               # 10min
+    on-timeout = loginctl lock-session          # lock screen when timeout has passed
 }
 
 listener {
-    timeout = 330                                 # 5.5min
-    on-timeout = hyprctl dispatch dpms off        # screen off when timeout has passed
-    on-resume = hyprctl dispatch dpms on          # screen on when activity is detected after timeout has fired.
-}
-
-listener {
-    timeout = 1800                                # 30min
-    on-timeout = systemctl suspend                # suspend pc
+    timeout = 660                               # 11min
+    on-timeout = hyprctl dispatch dpms off      # screen off when timeout has passed
+    on-resume = hyprctl dispatch dpms on        # screen on when activity is detected after timeout has fired.
 }
