--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -1,52 +1,56 @@
-$bg = rgba(1E1E1EFF)
-$fg = rgba(FEFEFEFF)
-$fg2 = rgba(9E9E9EFF)
-$ac = rgba(7571ADFF)
-$ds = rgba(303030FF)
-
-$black = rgba(000000ff)
-$danger = rgba(ED333BFF)
-$success = rgba(33D17AFF)
-$warning = rgba(F8E45CFF)
-$info = rgba(3584E4FF)
+$bg = rgb(282524)
+$fg = rgb(fbf1c7)
+$ac = rgb(7daea3)
+$ds = rgb(555555)
 
 background {
-    path = /home/m4rti/dotfiles/wallpapers/current
-    color = $bg
-}
-
-input-field {
     monitor =
-    size = 250, 40
-    outline_thickness = 1
-    dots_size = 0.1
-    dots_spacing = 0.3
-    fade_on_empty = true
-    hide_input = false
-    placeholder_text = 
-    outer_color = $ds
-    inner_color = $bg
-    font_color = $fg
-    font_family = SF Mono Powerline
-    check_color = $success
-    fail_color = $danger
+    color = $bg
 
-    rounding = 8
-
-    position = 0, 0
-    halign = center
-    valign = center
+    # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
+    blur_passes = 0 # 0 disables blurring
 }
 
 label { # Clock
     monitor =
     text = $TIME
-    shadow_passes = 0
     color = $fg
     font_size = 120
-    font_family = SF Pro Display
-
-    position = 140, -80
-    halign = left
+    font_family = IBM Plex Mono SmBld
+    position = 0, -80
+    halign = center
     valign = top
+}
+
+input-field {
+    monitor =
+    size = 200, 50
+    outline_thickness = 3
+    dots_size = 0.33
+    dots_spacing = 0.15
+    dots_center = false
+    dots_fade_time = 200
+    outer_color = $ac
+    inner_color = $fg
+    font_color = $bg
+    font_family = IBM Plex Mono
+    fade_on_empty = false
+    fade_timeout = 1000
+    placeholder_text = <i>Input Password...</i>
+    hide_input = false
+    rounding = -1
+    check_color = rgb(204, 136, 34)
+    fail_color = rgb(204, 34, 34)
+    fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
+    fail_timeout = 2000
+    fail_transition = 300
+    capslock_color = -1
+    numlock_color = -1
+    bothlock_color = -1
+    invert_numlock = false
+    swap_font_color = false
+
+    position = 0, -20
+    halign = center
+    valign = center
 }
