--- a/config/hypr/hyprland/displays-laptop.conf
+++ b/config/hypr/hyprland/displays-laptop.conf
@@ -1,14 +1,18 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 
+#       name,       WxH@Hz,     position,   scale
+monitor = HDMI-A-1, highrr,     auto,       1
+monitor = eDP-1,    highrr,     0x0,        1.25
+
+monitor = ,         preferred,  auto,       auto
+
 #           n, rules
 workspace = 1, monitor:eDP-1, persistent:true, default:true
 workspace = 2, monitor:eDP-1, persistent:true
 workspace = 3, monitor:eDP-1, persistent:true
 workspace = 4, monitor:eDP-1, persistent:true
 workspace = 5, monitor:eDP-1, persistent:true
-
-#       name,       WxH@Hz,     position,   scale
-monitor = HDMI-A-1, highrr,     0x0,        1
-monitor = eDP-1,    highrr,     auto,       1.25
-
-monitor = ,         preferred,  auto,       auto
+workspace = 6, monitor:eDP-1, persistent:true
+workspace = 7, monitor:eDP-1, persistent:true
+workspace = 8, monitor:eDP-1, persistent:true
+workspace = 9, monitor:eDP-1, persistent:true
