--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -17,14 +17,16 @@ $fileManager = $terminal -e lf
 $rssReader = $terminal -e newsboat
 $calculator = flatpak run org.gnome.Calculator
 $cliphist = cliphist list | cut -d' ' -f2- | tofi -c ~/.config/tofi/center.config | wl-copy
+$music = flatpak run com.spotify.Client
 
 # Programs
-bind = $mod,  RETURN, exec, $terminal
-bind = $mod,  R,      exec, $runner
-bind = $mod,  E,      exec, $fileManager
-bind = $mod,  I,      exec, $browser
-bind = $mod,  U,      exec, $rssReader
-bind = $mod,  C,      exec, $calculator
+bind = $mod, RETURN, exec, $terminal
+bind = $mod, R,      exec, $runner
+bind = $mod, E,      exec, $fileManager
+bind = $mod, I,      exec, $browser
+bind = $mod, U,      exec, $rssReader
+bind = $mod, C,      exec, $calculator
+bind = $mod, M,      exec, $music
 
 $bctl = busctl --user set-property rs.wl-gammarelay / rs.wl.gammarelay
 
@@ -32,7 +34,7 @@ $night_up   = $bctl UpdateTemperature d +100
 $night_down = $bctl UpdateTemperature d -100
 $night_base = $bctl Temperature q 4000
 
-$light_up   = $bctl UpdateBrightness d +0.02
+$light_up   = $bctl UpdateBrightness d +0.o2
 $light_down = $bctl UpdateBrightness d -0.02
 $light_base = $bctl Brightness d 1
 
@@ -70,7 +72,7 @@ bind = $modc, S, exec, hyprshot -z -m output -o ~/Pictures/screenshots
 $hyprscripts= ~/.config/hypr/scripts
 bind = $mod, V, exec, $hyprscripts/scratchpads.sh volume
 bind = $mod, P, exec, $hyprscripts/scratchpads.sh password
-bind = $mod, M, exec, $hyprscripts/scratchpads.sh music
+#bind = $mod, M, exec, $hyprscripts/scratchpads.sh music
 bind = $mod, G, exec, $hyprscripts/scratchpads.sh launchers
 
 # xd
