--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -22,16 +22,16 @@ windowrulev2 = suppressevent maximize,  class:.*
 windowrulev2 = size 50% 60%, class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = size 50% 60%, class:^(Bitwarden)$
 windowrulev2 = size 50% 65%, class:^(spotube)$
-windowrulev2 = size 50% 65%, title:^(Spotify)$
-windowrulev2 = size 50% 65%, title:^(Spotify Free)$
+#windowrulev2 = size 50% 65%, title:^(Spotify)$
+#windowrulev2 = size 50% 65%, title:^(Spotify Free)$
 
 # Floating
 windowrulev2 = float, title:^(Confirm File Replacing)$
 windowrulev2 = float, class:^(xdg-desktop-portal-gtk)$
 windowrulev2 = float, class:^(Friends List)$
 windowrulev2 = float, class:^(spotube)$
-windowrulev2 = float, title:^(Spotify)$
-windowrulev2 = float, title:^(Spotify Free)$
+#windowrulev2 = float, title:^(Spotify)$
+#windowrulev2 = float, title:^(Spotify Free)$
 windowrulev2 = float, class:^(Bitwarden)$
 windowrulev2 = float, class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = float, class:^(org.gnome.Calculator)$
@@ -98,8 +98,11 @@ windowrulev2 = workspace 5, class:^(sober)$
 
 ## 7
 # Background Tasks
-windowrulev2 = workspace 7, class:^(com.obsproject.Studio)$
-windowrulev2 = workspace 7, title:^(Ultimaker Cura)$
+windowrulev2 = workspace 7 silent, class:^(com.rafaelmardojai.Blanket)$
+windowrulev2 = workspace 7,        class:^(com.obsproject.Studio)$
+windowrulev2 = workspace 7,        title:^(Ultimaker Cura)$
+windowrulev2 = workspace 7,        title:^(Spotify Free)$
+
 # Game Launchers
 windowrulev2 = workspace 7 silent, class:^(steam)$
 windowrulev2 = workspace 7 silent, title:^(Steam)$
