--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -17,7 +17,7 @@ $fileManager = $terminal -e lf
 $rssReader = $terminal -e newsboat
 $calculator = flatpak run org.gnome.Calculator
 $cliphist = cliphist list | cut -d' ' -f2- | tofi -c ~/.config/tofi/center.config | wl-copy
-$music = flatpak run com.spotify.Client
+$music = ~/.config/hypr/scripts/spotify.sh
 
 # Programs
 bind = $mod, RETURN, exec, $terminal
