--- a/config/hypr-laptop/hyprland.conf
+++ b/config/hypr-laptop/hyprland.conf
@@ -1,13 +1,11 @@
-source = ~/.config/hypr/hyprland/envoirment.conf
-# source = ~/.config/hypr/hyprland/nvidia.conf
-source = ~/.config/hypr/hyprland/config.conf
+source = ./hyprland/envoirment.conf
+source = ./hyprland/config.conf
+source = ./hyprland/theme.conf
 
-# env = WLR_DRM_DEVICES,$HOME/.config/hypr/card
+source = ./hyprland/displays-laptop.conf
+source = ./hyprland/devices.conf
+source = ./hyprland/keybinds.conf
 
-source = ~/.config/hypr/hyprland/displays-laptop.conf
-source = ~/.config/hypr/hyprland/keybinds.conf
-source = ~/.config/hypr/hyprland/theme.conf
-source = ~/.config/hypr/hyprland/devices.conf
-
-source = ~/.config/hypr/hyprland/rules.conf
-source = ~/.config/hypr/hyprland/autostart.conf
+source = ./hyprland/rules.conf
+# source = ./hyprland/nvidia.conf
+source = ./hyprland/autostart.conf
