--- a/config/hypr/hyprland/displays-laptop.conf
+++ b/config/hypr/hyprland/displays-laptop.conf
@@ -1,10 +1,9 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 
 #       name,       WxH@Hz,     position,   scale
-monitor = HDMI-A-1, highrr,     auto,       1
+monitor = ,         prefered,   auto,       auto
+#monitor = HDMI-A-1, prefered,   auto,       1
 monitor = eDP-1,    highrr,     0x0,        1.25
-
-monitor = ,         preferred,  auto,       auto
 
 #           n, rules
 workspace = 1, monitor:eDP-1, persistent:true, default:true
