--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -12,7 +12,7 @@ $moda = SUPER_ALT
 
 $terminal = foot
 $runner = tofi-drun --drun-launch=true
-$browser = librewolf
+$browser = flatpak run io.gitlab.librewolf-community
 $fileManager = $terminal -e lf
 $rssReader = $terminal -e newsboat
 $calculator = flatpak run org.gnome.Calculator
@@ -79,6 +79,7 @@ bind = $mod, G, exec, $hyprscripts/scratchpads.sh launchers
 bind = CTRL_ALT, DELETE, exec, $terminal -e btop
 
 bind = $mod,  S, exec, book -o sites
+bind = $mod,  A, exec, book -o work
 # bind = $mods, S, exec, book sites
 
 # Actions
