--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -77,21 +77,21 @@ windowrulev2 = workspace 4, class:^(com.stremio.stremio)$
 
 ## 5
 # Games
-windowrulev2 = workspace 5, class:^(steam_app_)(.*)$
-windowrulev2 = workspace 5, title:^(Dolphin)$
-windowrulev2 = workspace 5, class:^(tetrio-desktop)$
-windowrulev2 = workspace 5, class:^(rocketleague.exe)$
-windowrulev2 = workspace 5, class:^(fallguys_client_game.exe)$
-windowrulev2 = workspace 5, class:^(cs2)$
-windowrulev2 = workspace 5, title:^(Counter-Strike 2)$
-windowrulev2 = workspace 5, class:^(osu!)$
-windowrulev2 = workspace 5, class:^(osu!.exe)$
-windowrulev2 = workspace 5, class:^(sc2_x64.exe)$
-windowrulev2 = workspace 5, class:^(portal2_linux)$
-windowrulev2 = workspace 5, class:^(factorio)$
-windowrulev2 = workspace 5, class:^(supertuxkart)$
-windowrulev2 = workspace 5, class:^(supertux2)$
-windowrulev2 = workspace 5, class:^(sober)$
+windowrulev2 = workspace 5 silent, class:^(steam_app_)(.*)$
+windowrulev2 = workspace 5 silent, title:^(Dolphin)$
+windowrulev2 = workspace 5 silent, class:^(tetrio-desktop)$
+windowrulev2 = workspace 5 silent, class:^(rocketleague.exe)$
+windowrulev2 = workspace 5 silent, class:^(fallguys_client_game.exe)$
+windowrulev2 = workspace 5 silent, class:^(cs2)$
+windowrulev2 = workspace 5 silent, title:^(Counter-Strike 2)$
+windowrulev2 = workspace 5 silent, class:^(osu!)$
+windowrulev2 = workspace 5 silent, class:^(osu!.exe)$
+windowrulev2 = workspace 5 silent, class:^(sc2_x64.exe)$
+windowrulev2 = workspace 5 silent, class:^(portal2_linux)$
+windowrulev2 = workspace 5 silent, class:^(factorio)$
+windowrulev2 = workspace 5 silent, class:^(supertuxkart)$
+windowrulev2 = workspace 5 silent, class:^(supertux2)$
+windowrulev2 = workspace 5 silent, class:^(sober)$
 
 ## 6
 # Secondary Tasks
