--- a/config/hypr/hyprland/envoirment.conf
+++ b/config/hypr/hyprland/envoirment.conf
@@ -44,3 +44,5 @@ env = MOZ_ACCELERATED,1
 env = MOZ_WEBRENDERER,1
 env = SAL_USE_VCLPLUGIN,qt5
 env = _NV_DISABLE_EXPLICIT_SYNC,0
+
+env = WOBSOCK,$XDG_RUNTIME_DIR/wob.sock
