--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -24,6 +24,7 @@ windowrulev2 = size 50% 60%, class:^(Bitwarden)$
 windowrulev2 = size 50% 65%, class:^(spotube)$
 #windowrulev2 = size 50% 65%, title:^(Spotify)$
 #windowrulev2 = size 50% 65%, title:^(Spotify Free)$
+windowrulev2 = size 50% 65%, class:^(xdg-desktop-portal-gtk)$
 
 # Floating
 windowrulev2 = float, title:^(Confirm File Replacing)$
