--- a/config/fontconfig/fonts.conf
+++ b/config/fontconfig/fonts.conf
@@ -24,4 +24,12 @@
             <double>102</double>
         </edit>
     </match>
+    <match target="pattern">
+        <test name="family" qual="any">
+            <string>monospace</string>
+        </test>
+        <edit binding="strong" mode="prepend" name="family">
+            <string>IBM Plex Mono</string>
+        </edit>
+    </match>
 </fontconfig>
