--- a/config/hypr/hyprland/displays-laptop.conf
+++ b/config/hypr/hyprland/displays-laptop.conf
@@ -11,7 +11,7 @@ workspace = 2, monitor:eDP-1, persistent:true
 workspace = 3, monitor:eDP-1, persistent:true
 workspace = 4, monitor:eDP-1, persistent:true
 workspace = 5, monitor:eDP-1, persistent:true
-workspace = 6, monitor:eDP-1, persistent:true
-workspace = 7, monitor:eDP-1, persistent:true
-workspace = 8, monitor:eDP-1, persistent:true
-workspace = 9, monitor:eDP-1, persistent:true
+workspace = 6, monitor:HDMI-A-1, persistent:true
+workspace = 7, monitor:HDMI-A-1, persistent:true
+workspace = 8, monitor:HDMI-A-1, persistent:true
+workspace = 9, monitor:HDMI-A-1, persistent:true
