--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -95,9 +95,12 @@ bind = $modc, W, exec, killall hyprpaper && hyprpaper
 # bind = ALT, Tab, bringactivetotop,
 bind = ALT, Tab, exec, hyprswitch gui
 
-binde =, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%+
+binde =, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%+ --limit 1
 binde =, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%-
-bind =, XF86AudioMute,         exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bind  =, XF86AudioMute,        exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+binde =,XF86MonBrightnessDown, exec, brightnessctl s 10%-
+binde =,XF86MonBrightnessUp,   exec, brightnessctl s +10%
+bind  =,XF86AudioMicMute,      exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 
 # Move focus with mod + vim motions
 bind = $mod, h, movefocus, l
