--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -35,7 +35,9 @@
             "hyprland/window"
         ],
         "modules-right": [
-            "tray",
+            "group/group-tray",
+            "pulseaudio",
+            "backlight",
             "battery",
             "hyprland/language",
             "clock#date",
