--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -36,8 +36,8 @@
         ],
         "modules-right": [
             "group/group-tray",
-            "pulseaudio",
-            "backlight",
+            // "pulseaudio",
+            // "backlight",
             "battery",
             "hyprland/language",
             "clock#date",
