--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -68,6 +68,7 @@ bind = $mods, C, exec, $cliphist
 
 bind = $mods, S, exec, hyprshot -z -m region -o ~/Pictures/screenshots
 bind = $modc, S, exec, hyprshot -z -m output -o ~/Pictures/screenshots
+bind = , Print,  exec, hyprshot -z -m region -o ~/Pictures/screenshots
 
 $hyprscripts= ~/.config/hypr/scripts
 bind = $mod, V, exec, $hyprscripts/scratchpads.sh volume
