--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,11 +1,13 @@
 source = ./hyprland/envoirment.conf
 source = ./hyprland/config.conf
+source = ./hyprland/rules.conf
 source = ./hyprland/theme.conf
 
-source = ./hyprland/displays.conf
 source = ./hyprland/devices.conf
 source = ./hyprland/keybinds.conf
-
-source = ./hyprland/rules.conf
 # source = ./hyprland/nvidia.conf
+
+source = ./hyprland/displays.conf
+source = ./hyprland/setup/$HOSTNAME.conf
+
 source = ./hyprland/autostart.conf
