--- a/config/hypr/hyprland/setup/comas.conf
+++ b/config/hypr/hyprland/setup/comas.conf
@@ -2,7 +2,7 @@
 
 #       name,       WxH@Hz,     position,   scale
 monitor = ,         prefered,   auto,       auto
-#monitor = HDMI-A-1, prefered,   auto,       1
+monitor = HDMI-A-1, prefered,   auto,       1
 monitor = eDP-1,    highrr,     0x0,        1.25
 
 #           n, rules
