--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -41,4 +41,4 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
-run '~/.config/tmux/plugins/tpm/tpm'
+run '~/.config/tmux/tpm/tpm'
