--- a/config/hypr/hyprland/setup/comas.conf
+++ b/config/hypr/hyprland/setup/comas.conf
@@ -2,16 +2,19 @@
 
 #       name,       WxH@Hz,     position,   scale
 monitor = ,         prefered,   auto,       auto
+monitor = eDP-1,    prefered,   0x0,        1.25
 monitor = HDMI-A-1, prefered,   auto,       1
-monitor = eDP-1,    highrr,     0x0,        1.25
+
+$PRIMARY = HDMI-A-1
+$SECONDARY= eDP-1
 
 #           n, rules
-workspace = 1, monitor:eDP-1, persistent:true, default:true
-workspace = 2, monitor:eDP-1, persistent:true
-workspace = 3, monitor:eDP-1, persistent:true
-workspace = 4, monitor:eDP-1, persistent:true
-workspace = 5, monitor:eDP-1, persistent:true
-workspace = 6, monitor:HDMI-A-1, persistent:true
-workspace = 7, monitor:HDMI-A-1, persistent:true
-workspace = 8, monitor:HDMI-A-1, persistent:true
-workspace = 9, monitor:HDMI-A-1, persistent:true
+workspace = 1, monitor:$PRIMARY, persistent:true, default:true
+workspace = 2, monitor:$PRIMARY, persistent:true
+workspace = 3, monitor:$PRIMARY, persistent:true
+workspace = 4, monitor:$PRIMARY, persistent:true
+workspace = 5, monitor:$PRIMARY, persistent:true
+workspace = 6, monitor:$SECONDARY, persistent:true
+workspace = 7, monitor:$SECONDARY, persistent:true
+workspace = 8, monitor:$SECONDARY, persistent:true
+workspace = 9, monitor:$SECONDARY, persistent:true
