--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -96,11 +96,15 @@ bind = $modc, W, exec, killall hyprpaper && hyprpaper
 # bind = ALT, Tab, bringactivetotop,
 bind = ALT, Tab, exec, hyprswitch gui
 
-binde =, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%+ --limit 1
-binde =, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%-
+$wob_volume = wpctl get-volume @DEFAULT_AUDIO_SINK@ | sed 's/[^0-9]//g' > $XDG_RUNTIME_DIR/wob.sock
+$wob_source = wpctl get-volume @DEFAULT_AUDIO_SINK@ | sed 's/[^0-9]//g' > $XDG_RUNTIME_DIR/wob.sock
+$wob_bright = sed -En 's/.*\(([0-9]+)%\).*/\1/p' > $XDG_RUNTIME_DIR/wob.sock
+
+binde =, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%+ --limit 1 && $wob_volume
+binde =, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%- && $wob_volume
 bind  =, XF86AudioMute,        exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-binde =,XF86MonBrightnessDown, exec, brightnessctl s 10%-
-binde =,XF86MonBrightnessUp,   exec, brightnessctl s +10%
+binde =,XF86MonBrightnessDown, exec, brightnessctl s 10%- | $wob_bright
+binde =,XF86MonBrightnessUp,   exec, brightnessctl s +10% | $wob_bright
 bind  =,XF86AudioMicMute,      exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 
 # Move focus with mod + vim motions
