--- a/config/hypr/hyprland/autostart.conf
+++ b/config/hypr/hyprland/autostart.conf
@@ -12,3 +12,4 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 exec-once = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark" 
 exec-once = otd-daemon
 exec-once = nextcloud --background
+exec-once = mkfifo /tmp/wobpipe && tail -f /tmp/wobpipe | wob
