--- a/config/hypr/hyprland/setup/comas.conf
+++ b/config/hypr/hyprland/setup/comas.conf
@@ -5,16 +5,8 @@ monitor = ,         prefered,   auto,       auto
 monitor = eDP-1,    prefered,   0x0,        1.25
 monitor = HDMI-A-1, prefered,   auto,       1
 
-$PRIMARY = HDMI-A-1
-$SECONDARY= eDP-1
+env = PRIMARY, eDP-1
+env = SECONDARY, HDMI-A-1
 
-#           n, rules
-workspace = 1, monitor:$PRIMARY, persistent:true, default:true
-workspace = 2, monitor:$PRIMARY, persistent:true
-workspace = 3, monitor:$PRIMARY, persistent:true
-workspace = 4, monitor:$PRIMARY, persistent:true
-workspace = 5, monitor:$PRIMARY, persistent:true
-workspace = 6, monitor:$SECONDARY, persistent:true
-workspace = 7, monitor:$SECONDARY, persistent:true
-workspace = 8, monitor:$SECONDARY, persistent:true
-workspace = 9, monitor:$SECONDARY, persistent:true
+exec-once = ~/.config/hypr/scripts/monitors.sh
+exec-once = /usr/bin/hyprland-monitor-attached ~/.config/hypr/scripts/monitors.sh
