--- a/config/hypr/hyprland/setup/comas.conf
+++ b/config/hypr/hyprland/setup/comas.conf
@@ -5,8 +5,9 @@ monitor = ,         prefered,   auto,       auto
 monitor = eDP-1,    prefered,   0x0,        1.25
 monitor = HDMI-A-1, prefered,   auto,       1
 
-env = PRIMARY, eDP-1
-env = SECONDARY, HDMI-A-1
+env = MONITOR_PRIMARY, eDP-1
+env = MONITOR_SECONDARY, HDMI-A-1
 
 exec-once = ~/.config/hypr/scripts/monitors.sh
-exec-once = /usr/bin/hyprland-monitor-attached ~/.config/hypr/scripts/monitors.sh
+exec-once = /usr/bin/hyprland-monitor-attached ~/.config/hypr/scripts/monitors.sh [~/.config/hypr/scripts/monitors.sh]
+
