--- a/config/hypr/hyprland/setup/cumputer.conf
+++ b/config/hypr/hyprland/setup/cumputer.conf
@@ -4,23 +4,31 @@ monitor = ,         preferred,     auto,        auto
 monitor = DP-1,     1920x1080@360, 1080x420,    1
 monitor = DP-2,     1920x1080@60,  3000x420,    1
 monitor = HDMI-A-2, 1920x1080@60,  0x0,         1, transform, 1
+monitor = HDMI-A-1, 1920x1080@60,  3000x420,    1, mirror, DP-1
 
 # monitor = ,         preferred,     auto,        auto
 # monitor = DP-1,     1920x1080@360, 0x0,    1
-# monitor = HDMI-A-1, 1920x1080@60,  3000x420,    1, mirror, DP-1
 
 exec-once = xrandr --output DP-1 --primary
 
+env = MONITOR_PRIMARY, DP-1
+env = MONITOR_SECONDARY, DP-2
+env = MONITOR_TERTIARY, HDMI-A-2
+env = MONITOR_QUATERNARY, HDMI-A-1
+
+exec-once = ~/.config/hypr/scripts/monitors.sh
+exec-once = /usr/bin/hyprland-monitor-attached ~/.config/hypr/scripts/monitors.sh [~/.config/hypr/scripts/monitors.sh]
+
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/
-workspace = 1, monitor:DP-1, persistent:true, default:true
-workspace = 2, monitor:DP-1, persistent:true
-workspace = 3, monitor:DP-1, persistent:true
-workspace = 4, monitor:DP-1, persistent:true
-workspace = 5, monitor:DP-1, persistent:true
-workspace = 6, monitor:DP-2, persistent:true
-workspace = 7, monitor:DP-2, persistent:true
-workspace = 8, monitor:DP-2, persistent:true
-workspace = 9, monitor:HDMI-A-2, persistent:true, layoutopt:orientation:top
+#workspace = 1, monitor:DP-1, persistent:true, default:true
+#workspace = 2, monitor:DP-1, persistent:true
+#workspace = 3, monitor:DP-1, persistent:true
+#workspace = 4, monitor:DP-1, persistent:true
+#workspace = 5, monitor:DP-1, persistent:true
+#workspace = 6, monitor:DP-2, persistent:true
+#workspace = 7, monitor:DP-2, persistent:true
+#workspace = 8, monitor:DP-2, persistent:true
+#workspace = 9, monitor:HDMI-A-2, persistent:true, layoutopt:orientation:top
 
 # workspace = 1, monitor:DP-1, persistent:true, default:true
 # workspace = 2, monitor:DP-1, persistent:true
