--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -10,3 +10,5 @@ source = ./hyprland/keybinds.conf
 source = ./hyprland/setup/$HOSTNAME.conf
 
 source = ./hyprland/autostart.conf
+
+exec-once = ~/.config/hypr/scripts/monitors.sh
