--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -75,6 +75,7 @@ bind = $mod, V, exec, $hyprscripts/scratchpads.sh volume
 bind = $mod, P, exec, $hyprscripts/scratchpads.sh password
 #bind = $mod, M, exec, $hyprscripts/scratchpads.sh music
 bind = $mod, G, exec, $hyprscripts/scratchpads.sh launchers
+bind = $modc, RETURN, exec, $hyprscripts/monitors.sh
 
 # xd
 bind = CTRL_ALT, DELETE, exec, $terminal -e btop
