--- a/config/hypr/hyprland/setup/cumputer.conf
+++ b/config/hypr/hyprland/setup/cumputer.conf
@@ -16,19 +16,19 @@ env = MONITOR_SECONDARY, DP-2
 env = MONITOR_TERTIARY, HDMI-A-2
 env = MONITOR_QUATERNARY, HDMI-A-1
 
-exec-once = ~/.config/hypr/scripts/monitors.sh
-exec-once = /usr/bin/hyprland-monitor-attached ~/.config/hypr/scripts/monitors.sh [~/.config/hypr/scripts/monitors.sh]
+# exec-once = ~/.config/hypr/scripts/monitors.sh
+# exec-once = /usr/bin/hyprland-monitor-attached ~/.config/hypr/scripts/monitors.sh [~/.config/hypr/scripts/monitors.sh]
 
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/
-#workspace = 1, monitor:DP-1, persistent:true, default:true
-#workspace = 2, monitor:DP-1, persistent:true
-#workspace = 3, monitor:DP-1, persistent:true
-#workspace = 4, monitor:DP-1, persistent:true
-#workspace = 5, monitor:DP-1, persistent:true
-#workspace = 6, monitor:DP-2, persistent:true
-#workspace = 7, monitor:DP-2, persistent:true
-#workspace = 8, monitor:DP-2, persistent:true
-#workspace = 9, monitor:HDMI-A-2, persistent:true, layoutopt:orientation:top
+workspace = 1, monitor:DP-1, persistent:true, default:true
+workspace = 2, monitor:DP-1, persistent:true
+workspace = 3, monitor:DP-1, persistent:true
+workspace = 4, monitor:DP-1, persistent:true
+workspace = 5, monitor:DP-1, persistent:true
+workspace = 6, monitor:DP-2, persistent:true
+workspace = 7, monitor:DP-2, persistent:true
+workspace = 8, monitor:DP-2, persistent:true
+workspace = 9, monitor:HDMI-A-2, persistent:true, layoutopt:orientation:top
 
 # workspace = 1, monitor:DP-1, persistent:true, default:true
 # workspace = 2, monitor:DP-1, persistent:true
