--- a/config/hypr/hyprland/setup/comas.conf
+++ b/config/hypr/hyprland/setup/comas.conf
@@ -7,3 +7,5 @@ monitor = HDMI-A-1, prefered,   auto,       1
 
 env = MONITOR_PRIMARY, eDP-1
 env = MONITOR_SECONDARY, HDMI-A-1
+
+exec-once = ~/.config/hypr/scripts/monitors.sh
