--- a/config/hypr/hyprland/setup/cumputer.conf
+++ b/config/hypr/hyprland/setup/cumputer.conf
@@ -25,10 +25,10 @@ workspace = 2, monitor:DP-1, persistent:true
 workspace = 3, monitor:DP-1, persistent:true
 workspace = 4, monitor:DP-1, persistent:true
 workspace = 5, monitor:DP-1, persistent:true
-workspace = 6, monitor:DP-2, persistent:true
+workspace = 6, monitor:DP-2, persistent:true, default:true
 workspace = 7, monitor:DP-2, persistent:true
 workspace = 8, monitor:DP-2, persistent:true
-workspace = 9, monitor:HDMI-A-2, persistent:true, layoutopt:orientation:top
+workspace = 9, monitor:HDMI-A-2, persistent:true, default:true, layoutopt:orientation:top
 
 # workspace = 1, monitor:DP-1, persistent:true, default:true
 # workspace = 2, monitor:DP-1, persistent:true
