--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -24,6 +24,7 @@ bind = $mod, RETURN, exec, $terminal
 bind = $mod, R,      exec, $runner
 bind = $mod, E,      exec, $fileManager
 bind = $mod, I,      exec, $browser
+bind = $mods,I,      exec, $browser -p Work
 bind = $mod, U,      exec, $rssReader
 bind = $mod, C,      exec, $calculator
 bind = $mod, M,      exec, $music
