--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -81,8 +81,8 @@ bind = $modc, RETURN, exec, $hyprscripts/monitors.sh
 # xd
 bind = CTRL_ALT, DELETE, exec, $terminal -e btop
 
-bind = $mod,  S, exec, book -o sites
-bind = $mod,  A, exec, book -o work
+bind = $mod,  S, exec, book sites
+bind = $mod,  A, exec, book work
 # bind = $mods, S, exec, book sites
 
 # Actions
