--- a/config/hypr/hyprland/setup/comas.conf
+++ b/config/hypr/hyprland/setup/comas.conf
@@ -5,7 +5,7 @@ monitor = ,         prefered,   auto,       auto
 monitor = eDP-1,    prefered,   0x0,        1.25
 monitor = HDMI-A-1, prefered,   auto,       1
 
-env = MONITOR_PRIMARY, eDP-1
-env = MONITOR_SECONDARY, HDMI-A-1
+env = MONITOR_PRIMARY, HDMI-A-1
+env = MONITOR_SECONDARY, eDP-1
 
 exec-once = ~/.config/hypr/scripts/monitors.sh
