--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -38,6 +38,7 @@ windowrulev2 = float, class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = float, class:^(org.gnome.Calculator)$
 windowrulev2 = float, class:^(com.gabm.satty)$
 windowrulev2 = center,class:^(com.gabm.satty)$
+windowrulev2 = center, class:^(xdg-desktop-portal-gtk)$
 
 # Xwayland
 windowrulev2 = noinitialfocus, class:^(xwaylandvideobridge)$
