--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -94,6 +94,7 @@ windowrulev2 = workspace 5 silent, class:^(factorio)$
 windowrulev2 = workspace 5 silent, class:^(supertuxkart)$
 windowrulev2 = workspace 5 silent, class:^(supertux2)$
 windowrulev2 = workspace 5 silent, class:^(sober)$
+windowrulev2 = workspace 5 silent, class:^(org.vinegarhq.Sober)$
 
 ## 6
 # Secondary Tasks
