--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -12,7 +12,8 @@ $moda = SUPER_ALT
 
 $terminal = foot
 $runner = tofi-drun --drun-launch=true
-$browser = flatpak run io.gitlab.librewolf-community
+# $browser = flatpak run io.gitlab.librewolf-community
+$browser = flatpak run io.github.zen_browser.zen
 $fileManager = $terminal -e lf
 $rssReader = $terminal -e newsboat
 $calculator = flatpak run org.gnome.Calculator
