--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -82,9 +82,8 @@ bind = $modc, RETURN, exec, $hyprscripts/monitors.sh
 # xd
 bind = CTRL_ALT, DELETE, exec, $terminal -e btop
 
-bind = $mod,  S, exec, book sites
-bind = $mod,  A, exec, book work
-# bind = $mods, S, exec, book sites
+bind = $mod, S, exec, book sites
+bind = $mod, A, exec, book -c ~/.config/book/config-work.toml work
 
 # Actions
 bind = $modc, Q, exit
