--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -26,6 +26,7 @@ bind = $mod, R,      exec, $runner
 bind = $mod, E,      exec, $fileManager
 bind = $mod, I,      exec, $browser
 bind = $mods,I,      exec, $browser -p Work
+bind = $modc,I,      exec, $browser -p Study
 bind = $mod, U,      exec, $rssReader
 bind = $mod, C,      exec, $calculator
 bind = $mod, M,      exec, $music
