update config idk

--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -83,8 +83,8 @@ bind = $modc, RETURN, exec, $hyprscripts/monitors.sh
 # xd
 bind = CTRL_ALT, DELETE, exec, $terminal -e btop
 
-bind = $mod, S, exec, book sites
-bind = $mod, A, exec, book -c ~/.config/book/config-work.toml work
+bind = $mod, S, exec, book personal
+bind = $mod, A, exec, book work
 
 # Actions
 bind = $modc, Q, exit
