--- a/config/tofi/center.config
+++ b/config/tofi/center.config
@@ -22,8 +22,8 @@ padding-right = 10
 
 input-color = #fefefe
 default-result-color = #999999
-selection-color = #282524
-selection-background = #7daea3
+selection-color = #1b1b1b
+selection-background = #8ec07c
 selection-background-padding = 4, 4
 input-background-padding = 4, 4
 alternate-result-background-padding = 4, 4
