--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -7,6 +7,6 @@ source = ./hyprland/devices.conf
 source = ./hyprland/keybinds.conf
 # source = ./hyprland/nvidia.conf
 
-source = ./hyprland/setup/$HOSTNAME.conf
+source = ./hyprland/setup.conf
 
 source = ./hyprland/autostart.conf
