--- a/config/hypr/hyprland/autostart.conf
+++ b/config/hypr/hyprland/autostart.conf
@@ -6,8 +6,8 @@ exec-once = wl-paste --type image --watch cliphist store    # Stores only image 
 exec-once = wl-clip-persist --clipboard both
 exec-once = udiskie -s
 exec-once = wl-gammarelay-rs run
-#exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = systemctl --user start hyprpolkitagent
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+# exec-once = systemctl --user start hyprpolkitagent
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark" 
 exec-once = otd-daemon
