--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -24,7 +24,7 @@ $music = flatpak run com.spotify.Client
 bind = $mod, RETURN, exec, $terminal
 bind = $mod, R,      exec, $runner
 bind = $mod, E,      exec, $fileManager
-bind = $mod, I,      exec, $browser
+bind = $mod, I,      exec, $browser -p Personal
 bind = $mods,I,      exec, $browser -p Work
 bind = $modc,I,      exec, $browser -p Study
 bind = $mod, U,      exec, $rssReader
@@ -140,7 +140,7 @@ bind = $mod, 6, workspace, 6
 bind = $mod, 7, workspace, 7
 bind = $mod, 8, workspace, 8
 bind = $mod, 9, workspace, 9
-bind = $mod, 0,workspace, 10
+bind = $mod, 0, workspace, 10
 
 # Move active window to a workspace with mod + SHIFT + [0-9]
 bind = $mods, 1, movetoworkspacesilent, 1
