--- a/config/hypr/hyprland/setups/comas.conf
+++ b/config/hypr/hyprland/setups/comas.conf
@@ -8,4 +8,14 @@ monitor = HDMI-A-1, prefered,   auto,       1
 env = MONITOR_PRIMARY, HDMI-A-1
 env = MONITOR_SECONDARY, eDP-1
 
-exec-once = ~/.config/hypr/scripts/monitors.sh
+workspace = 1, monitor:HDMI-A-1, persistent:true, default:true
+workspace = 2, monitor:HDMI-A-1, persistent:true
+workspace = 3, monitor:HDMI-A-1, persistent:true
+workspace = 4, monitor:HDMI-A-1, persistent:true
+workspace = 5, monitor:HDMI-A-1, persistent:true
+workspace = 6, monitor:eDP-2, persistent:true, default:true
+workspace = 7, monitor:eDP-2, persistent:true
+workspace = 8, monitor:eDP-2, persistent:true
+workspace = 9, monitor:eDP-2, persistent:true
+
+# exec-once = ~/.config/hypr/scripts/monitors.sh
