--- a/config/hypr/hyprland/theme.conf
+++ b/config/hypr/hyprland/theme.conf
@@ -17,15 +17,17 @@ general {
 # See https://wiki.hyprland.org/Configuring/Variables/ for more
 decoration {
     rounding = 0
+    dim_special = 0.5
     blur {
         enabled = true
         size = 4
         passes = 1
     }
-    drop_shadow = false
-    shadow_range = 0
-    shadow_render_power = 0
-    dim_special = 0.5
+    shadow {
+        enabled = false
+        range = 0
+        render_power = 0
+    }
 }
 
 # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
