--- a/config/book/study.conf
+++ b/config/book/study.conf
@@ -5,3 +5,5 @@
     "UOC Dashboard"     "https://aula.uoc.edu"
     "ALURA"             "https://eimtlogica.uoc.edu/alura/"
     "Moodle"            "https://moodos.uoc.edu"
+    "Computadors"       "https://aula.uoc.edu/courses/46250"
+    "Logica"            "https://aula.uoc.edu/courses/46076"
