--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -52,9 +52,9 @@ $bright_low = $bctl Brightness d 0.25
 bind = $modc, B, exec, $bright_low
 bind = $mod,  B, exec, $bright_mid
 bind = $mods, B, exec, $bright_top
-bind = $modc, N, exec, $night_top
-bind = $mod,  N, exec, $night_mid
-bind = $mods, N, exec, $night_low
+bind = $modc, N, exec, killall hyprsunset; hyprsunset -t 2500
+bind = $mod , N, exec, killall hyprsunset; hyprsunset -t 4500
+bind = $mods, N, exec, killall hyprsunset; hyprsunset -t 6000
 bind = $mods, C, exec, $cliphist
 # bind = $modc, B, exec, $light_up
 # bind = $mod,  B, exec, $light_base
