--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -1,14 +1,3 @@
-# WORKSPACES
-# 1 -> General Use
-# 2 -> General Use
-# 3 -> Image / Video / Audio editing
-# 4 -> Entertainment
-# 5 -> Gaming
-# 6 -> Other Use
-# 7 -> Background Tasks / Game Launchers
-# 8 -> Communications
-# 9 -> Chat applications
-
 # Layer rules
 #layerrule = blur,      waybar
 #layerrule = blur,      launcher
@@ -67,47 +56,53 @@ windowrulev2 = fullscreen, class:^(rocketleague.exe)$
 
 # Default workspace for applications
 
-## 3
-# Image / Video / Audio editing
-windowrulev2 = workspace 3, title:^(GNU Image Manipulation Program)$
-windowrulev2 = workspace 3, title:^(GIMP Startup)$
-windowrulev2 = workspace 3, class:^(audacity.bin)$
+# WORKSPACES
+# 1 - Primary Task
+# 2 - Primary Task Aid
+# 
+# 3 - Secondary Task
+# 4 - Secondary Task Aid
+# 
+# 5 - Creation: Gimp, Audacity, Inkscape, Obs
+# 6 - Entertainment: Games, Movies
+# 7 - Background tasks: Cura, Game Launcher
+# 8 - Chat: Dsicord, Whatsapp, Teams
+# 9 - Mail: Thunderbird
 
-## 4
-# Entertainment
-windowrulev2 = workspace 4, class:^(com.stremio.stremio)$
+# 5
+## Creation
+windowrulev2 = workspace 5, class:^(com.obsproject.Studio)$
+windowrulev2 = workspace 5, title:^(GNU Image Manipulation Program)$
+windowrulev2 = workspace 5, title:^(GIMP Startup)$
+windowrulev2 = workspace 5, class:^(audacity.bin)$
 
-## 5
-# Games
-windowrulev2 = workspace 5 silent, class:^(steam_app_)(.*)$
-windowrulev2 = workspace 5 silent, title:^(Dolphin)$
-windowrulev2 = workspace 5 silent, class:^(tetrio-desktop)$
-windowrulev2 = workspace 5 silent, class:^(rocketleague.exe)$
-windowrulev2 = workspace 5 silent, class:^(fallguys_client_game.exe)$
-windowrulev2 = workspace 5 silent, class:^(cs2)$
-windowrulev2 = workspace 5 silent, title:^(Counter-Strike 2)$
-windowrulev2 = workspace 5 silent, class:^(osu!)$
-windowrulev2 = workspace 5 silent, class:^(osu!.exe)$
-windowrulev2 = workspace 5 silent, class:^(sc2_x64.exe)$
-windowrulev2 = workspace 5 silent, class:^(portal2_linux)$
-windowrulev2 = workspace 5 silent, class:^(factorio)$
-windowrulev2 = workspace 5 silent, class:^(supertuxkart)$
-windowrulev2 = workspace 5 silent, class:^(supertux2)$
-windowrulev2 = workspace 5 silent, class:^(sober)$
-windowrulev2 = workspace 5 silent, class:^(org.vinegarhq.Sober)$
+# 6
+## Entertainment
+windowrulev2 = workspace 6, class:^(com.stremio.stremio)$
+### Games
+windowrulev2 = workspace 6 silent, class:^(steam_app_)(.*)$
+windowrulev2 = workspace 6 silent, title:^(Dolphin)$
+windowrulev2 = workspace 6 silent, class:^(tetrio-desktop)$
+windowrulev2 = workspace 6 silent, class:^(rocketleague.exe)$
+windowrulev2 = workspace 6 silent, class:^(fallguys_client_game.exe)$
+windowrulev2 = workspace 6 silent, class:^(cs2)$
+windowrulev2 = workspace 6 silent, title:^(Counter-Strike 2)$
+windowrulev2 = workspace 6 silent, class:^(osu!)$
+windowrulev2 = workspace 6 silent, class:^(osu!.exe)$
+windowrulev2 = workspace 6 silent, class:^(sc2_x64.exe)$
+windowrulev2 = workspace 6 silent, class:^(portal2_linux)$
+windowrulev2 = workspace 6 silent, class:^(factorio)$
+windowrulev2 = workspace 6 silent, class:^(supertuxkart)$
+windowrulev2 = workspace 6 silent, class:^(supertux2)$
+windowrulev2 = workspace 6 silent, class:^(sober)$
+windowrulev2 = workspace 6 silent, class:^(org.vinegarhq.Sober)$
 
-## 6
-# Secondary Tasks
-windowrulev2 = workspace 7 silent, class:^(teams-for-linux)$
-
-## 7
-# Background Tasks
+# 7
+## Background Tasks
 windowrulev2 = workspace 7 silent, class:^(com.rafaelmardojai.Blanket)$
-windowrulev2 = workspace 7,        class:^(com.obsproject.Studio)$
 windowrulev2 = workspace 7,        title:^(Ultimaker Cura)$
-windowrulev2 = workspace 7,        title:^(Spotify Free)$
 
-# Game Launchers
+### Game Launchers
 windowrulev2 = workspace 7 silent, class:^(steam)$
 windowrulev2 = workspace 7 silent, title:^(Steam)$
 windowrulev2 = workspace 7 silent, class:^(explorer.exe)$
@@ -116,17 +111,15 @@ windowrulev2 = workspace 7 silent, class:^(com.heroicgameslauncher.hgl)$
 windowrulev2 = workspace 7 silent, class:^(heroic)$
 windowrulev2 = workspace 7 silent, class:^(dolphin-emu)$
 
-## 8
-# Communications
-windowrulev2 = workspace 8 silent, class:^(org.mozilla.Thunderbird)$
+# 8
+## Chats
+windowrulev2 = workspace 8 silent, class:^(whatsapp-desktop-linux)$
+windowrulev2 = workspace 8 silent, class:^(com.rtosta.zapzap)$
+windowrulev2 = workspace 8 silent, class:^(vesktop)$
+windowrulev2 = workspace 8 silent, class:^(com.discordapp.Discord)$
+windowrulev2 = workspace 8 silent, class:^(im.riot.Riot)$
+windowrulev2 = workspace 8 silent, class:^(teams-for-linux)$
 
-## 9
-# Chat apps
-# Whatsapp
-windowrulev2 = workspace 9 silent, class:^(whatsapp-desktop-linux)$
-windowrulev2 = workspace 9 silent, class:^(com.rtosta.zapzap)$
-# Discord
-windowrulev2 = workspace 9 silent, class:^(vesktop)$
-windowrulev2 = workspace 9 silent, class:^(com.discordapp.Discord)$
-# Matrix
-windowrulev2 = workspace 9 silent, class:^(im.riot.Riot)$
+# 9
+## Email
+windowrulev2 = workspace 9 silent, class:^(org.mozilla.Thunderbird)$
