--- a/config/hypr/hyprland/setups/cumputer.conf
+++ b/config/hypr/hyprland/setups/cumputer.conf
@@ -20,15 +20,24 @@ env = MONITOR_QUATERNARY, HDMI-A-1
 # exec-once = /usr/bin/hyprland-monitor-attached ~/.config/hypr/scripts/monitors.sh [~/.config/hypr/scripts/monitors.sh]
 
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/
+
+## Primary
 workspace = 1, monitor:DP-1, persistent:true, default:true
-workspace = 2, monitor:DP-1, persistent:true
 workspace = 3, monitor:DP-1, persistent:true
-workspace = 4, monitor:DP-1, persistent:true
 workspace = 5, monitor:DP-1, persistent:true
-workspace = 6, monitor:DP-2, persistent:true, default:true
+
+workspace = 6, monitor:DP-1, persistent:true
+
+## Secondary
+workspace = 2, monitor:DP-2, persistent:true, default:true
+workspace = 4, monitor:DP-2, persistent:true
 workspace = 7, monitor:DP-2, persistent:true
-workspace = 8, monitor:DP-2, persistent:true
+
+## Tertiary
+workspace = 8, monitor:HDMI-A-2, persistent:true, default:true, layoutopt:orientation:top
 workspace = 9, monitor:HDMI-A-2, persistent:true, default:true, layoutopt:orientation:top
+
+## Tertiary Monitor
 
 # workspace = 1, monitor:DP-1, persistent:true, default:true
 # workspace = 2, monitor:DP-1, persistent:true
