--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -5,7 +5,7 @@
 #layerrule = dimaround, launcher
 
 windowrulev2 = noblur, title:^()$, class:^()$ 
-windowrulev2 = suppressevent maximize,  class:.*
+windowrulev2 = suppressevent maximize, class:.*
 
 # Scratchpads
 windowrulev2 = size 50% 60%, class:^(org.pulseaudio.pavucontrol)$
@@ -16,17 +16,17 @@ windowrulev2 = size 50% 65%, class:^(spotube)$
 windowrulev2 = size 50% 65%, class:^(xdg-desktop-portal-gtk)$
 
 # Floating
-windowrulev2 = float, title:^(Confirm File Replacing)$
-windowrulev2 = float, class:^(xdg-desktop-portal-gtk)$
-windowrulev2 = float, class:^(Friends List)$
-windowrulev2 = float, class:^(spotube)$
+windowrulev2 = float,  title:^(Confirm File Replacing)$
+windowrulev2 = float,  class:^(xdg-desktop-portal-gtk)$
+windowrulev2 = float,  class:^(Friends List)$
+windowrulev2 = float,  class:^(spotube)$
 #windowrulev2 = float, title:^(Spotify)$
 #windowrulev2 = float, title:^(Spotify Free)$
-windowrulev2 = float, class:^(Bitwarden)$
-windowrulev2 = float, class:^(org.pulseaudio.pavucontrol)$
-windowrulev2 = float, class:^(org.gnome.Calculator)$
-windowrulev2 = float, class:^(com.gabm.satty)$
-windowrulev2 = center,class:^(com.gabm.satty)$
+windowrulev2 = float,  class:^(Bitwarden)$
+windowrulev2 = float,  class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = float,  class:^(org.gnome.Calculator)$
+windowrulev2 = float,  class:^(com.gabm.satty)$
+windowrulev2 = center, class:^(com.gabm.satty)$
 windowrulev2 = center, class:^(xdg-desktop-portal-gtk)$
 
 # Xwayland
@@ -63,15 +63,14 @@ windowrulev2 = fullscreen, class:^(rocketleague.exe)$
 # 3 - Secondary Task
 # 4 - Secondary Task Aid
 # 
-# 5 - Creation: Gimp, Audacity, Inkscape, Obs
+# 5 - Creation: Gimp, Audacity, Inkscape
 # 6 - Entertainment: Games, Movies
-# 7 - Background tasks: Cura, Game Launcher
+# 7 - Background tasks: Cura, Game Launcher, Obs
 # 8 - Chat: Dsicord, Whatsapp, Teams
 # 9 - Mail: Thunderbird
 
 # 5
 ## Creation
-windowrulev2 = workspace 5, class:^(com.obsproject.Studio)$
 windowrulev2 = workspace 5, title:^(GNU Image Manipulation Program)$
 windowrulev2 = workspace 5, title:^(GIMP Startup)$
 windowrulev2 = workspace 5, class:^(audacity.bin)$
@@ -99,6 +98,7 @@ windowrulev2 = workspace 6 silent, class:^(org.vinegarhq.Sober)$
 
 # 7
 ## Background Tasks
+windowrulev2 = workspace 7,        class:^(com.obsproject.Studio)$
 windowrulev2 = workspace 7 silent, class:^(com.rafaelmardojai.Blanket)$
 windowrulev2 = workspace 7,        title:^(Ultimaker Cura)$
 
